--- a/freg/src/main/res/layout/activity_main.xml
+++ b/freg/src/main/res/layout/activity_main.xml
@@ -19,30 +19,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/btnTrain"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_vertical_margin"
-                android:text="Train Face" />
-
             <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <TextView
-                    android:id="@+id/textView2"
+                <Button
+                    android:id="@+id/btnTrain"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:text="train list"
-                    android:textAppearance="?android:attr/textAppearanceMedium" />
-            <Button
+                    android:layout_margin="@dimen/activity_vertical_margin"
+                    android:text="Train Face" />
+
+                <Button
                     android:id="@+id/clearTrain"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/activity_vertical_margin"
-                    android:text="clear trained faces" />
+                    android:text="Clear" />
            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
@@ -72,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_vertical_margin"
-                android:text="find who" />
+                android:text="find" />
 
             <ImageView
                 android:layout_width="@dimen/image_preview"
